--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t ruru0403/Fib-docker -f ./client/Dockerfile.dev ./client
+  - docker build -t ruru0403/fib-docker -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true ruru0403/Fib-docker npm run test
+  - docker run -e CI=true ruru0403/fib-docker npm run test
 
 after_success: # 測試成功後，build image
-  - docker build -t ruru0403/Fib-client ./client
-  - docker build -t ruru0403/Fib-nginx ./nginx
-  - docker build -t ruru0403/Fib-server ./server
-  - docker build -t ruru0403/Fib-worker ./worker
+  - docker build -t ruru0403/fib-client ./client
+  - docker build -t ruru0403/fib-nginx ./nginx
+  - docker build -t ruru0403/fib-server ./server
+  - docker build -t ruru0403/fib-worker ./worker
   # Log into the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push ruru0403/Fib-client
-  - docker push ruru0403/Fib-nginx
-  - docker push ruru0403/Fib-server
-  - docker push ruru0403/Fib-worker
+  - docker push ruru0403/fib-client
+  - docker push ruru0403/fib-nginx
+  - docker push ruru0403/fib-server
+  - docker push ruru0403/fib-worker
