--- a/docker-compse.yml
+++ b/docker-compse.yml
@@ -14,7 +14,7 @@ services:
       - PGUSER=postgres 
       - PGHOST=postgres
       - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
+      - PGPASSWORD=password
       - PGPORT=5432
   worker:
     image: "ruru0403/fix-worker"
