--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
       - PGPASSWORD=$PGPASSWORD
       - PGPORT=$PGPORT
   worker:
-    image: "ruru0403/fix-worker"
+    image: "ruru0403/fib-worker"
     mem_limit: 128m
     hostname: worker
     environment:
       - REDIS_HOST=$REDIS_HOST
       - REDIS_PORT=$REDIS_PORT
   nginx:
-    image: "ruru0403/nginx"
+    image: "ruru0403/fib-nginx"
     mem_limit: 128m
     hostname: nginx
     ports:
